# store

./: .markdownlint.yaml  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: docs.yml  test.yml
appstore/: __init__.py  accounts.py  apps.py  appstore.py  cli.py  collections.py  users.py
tests/: __init__.py  test_accounts.py  test_apps.py  test_appstore.py  test_cli.py  test_collections.py  test_users.py
tests/cli/: input1.txt  output1.txt
