[tool.poetry]
name = "appstore"
version = "0.1.0"
description = "App store"
authors = ["Nuno Costa <91nunocosta@gmail.com>"]
readme = "README.md"
repository = "https://github.com/91nunocosta/store/"
[tool.poetry.scripts]
appstore = "appstore.cli:run"
[tool.poetry.dependencies]
python = ">=3.8,<4.0"
[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "^2.15.0"
mypy = "^1.0.0"
pylint = "^2.16.1"
radon = "^6.0.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^3.0.0"

[tool.poetry.group.cd]
optional = true

[tool.poetry.group.cd.dependencies]
python-semantic-release = "^7.33.1"
tox = "^3.24.4"


[tool.poetry.group.docs.dependencies]
pdoc = "^13.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pylint]
max-line-length = 88
disable = "unnecessary-ellipsis,too-few-public-methods,too-many-arguments"
